static/style.css
:root {
  font-size: 62.5%; /* (62.5/100) * 16px = 10px */
  --font-scale: 1;
  --font-size-small: calc(1rem * var(--font-scale));
  --font-size-normal: calc(1.2rem * var(--font-scale));
  --font-size-large: calc(1.35rem * var(--font-scale));
  --font-size-extra-large: calc(1.8rem * var(--font-scale));

  --text-color: #050505;
  --text-background: #f6f6ef;
  --text-background-accent: hsl(25, 100%, 90%);
  --color-accent: #ff6600;
  --text-color-muted: #696969;
}

@media (prefers-color-scheme: dark) {
  :root {
    --text-color: #e8e8e8;
    --text-background: #211d12;
    --text-background-accent: #572600;
    --color-accent: #ff6600;
    --text-color-muted: #939393;
  }
}

html {
  background-color: var(--text-background);
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

body {
  --font-family: monospace;
  font-family: var(--font-family);
  font-size: var(--font-size-normal);
  color: var(--text-color);

  max-width: 80em;
  margin: 0 auto;

  border: none;
  border-top: 0.5em solid var(--color-accent);
  box-sizing: border-box;
}

@media (max-width: 80em) {
}

h1 {
  font-size: var(--font-size-extra-large);
}

h2,
h3 {
  font-size: var(--font-size-large);
}

a {
  color: var(--text-color);
}

pre {
  overflow: auto;
  border: 1px solid var(--text-color-muted);
  padding: 1em;
}

a:active,
a:visited {
  color: var(--text-color-muted);
}

.support-ukraine-link {
  display: block;
  border: 1px solid;
  margin: 2em 2em;
  padding: 1em 4em;
  text-align: center;
  font-size: var(--font-size-extra-large);
}

.items {
  padding: 0 0.5rem;
}

.item {
  border-bottom: 1px solid var(--text-color-muted);
}

.item-title {
  margin-top: 0;
  margin-bottom: 0;
}

.title-link {
  display: block;
  padding: calc(var(--font-size-large) * 0.2) 0;
}

.short-link {
  font-size: var(--font-size-normal);
  color: var(--text-color-muted);
}

.item-info {
  display: flex;
  align-items: center;
}

.item-info-comments {
  display: flex;
  flex-grow: 1;
  justify-content: end;
  align-items: center;
}

.item-points,
.user,
.comments-link {
  padding: calc(var(--font-size-normal) * 0.4) 0;
}

.item-points {
  padding-left: var(--font-size-normal);
}

.user {
  padding-left: calc(var(--font-size-normal) * 0.4);
}

.comments-link {
  text-align: right;
  padding-left: calc(var(--font-size-normal) * 0.6);
  padding-right: calc(var(--font-size-normal) * 0.6);
  background-color: var(--text-background-accent);
  border-radius: 0.2em;
}

.comments-count {
  font-weight: bold;
}

.title-link,
.comments-link {
  text-decoration: none;
}

.single-item-title {
  padding: 0 0.5rem;
}

.item-content {
  padding: 0 0.5rem;
}

.comment {
  --comment-padding-step: 0.5em;
}

.comment-level-1 {
  padding-left: calc(var(--comment-padding-step) * 2);
}

.comment-level-2 {
  padding-left: calc(var(--comment-padding-step) * 4);
}

.comment-level-3 {
  padding-left: calc(var(--comment-padding-step) * 5);
}

.comment-level-4 {
  padding-left: calc(var(--comment-padding-step) * 6);
}

.comment-level-5 {
  padding-left: calc(var(--comment-padding-step) * 7);
}

.comment-level-6 {
  padding-left: calc(var(--comment-padding-step) * 8);
}

.comment-collapse {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 4px;
  margin-bottom: 4px;
  overflow: visible;
}

.collapse-button,
.font-scale-button {
  appearance: none;
  border: none;
  cursor: pointer;
  font-family: var(--font-family);
  background-color: var(--text-background-accent);
  font-size: var(--font-size-normal);
  padding: 0.4em 0.8em;
  margin-left: 0.4em;
  border-radius: 0.2em;
}

#reset-font-size {
  margin-left: 3em;
}

.comment-collapse-line {
  flex-grow: 1;
  border: 1px solid transparent;
  border-bottom: 0.1em solid var(--text-color-muted);
  height: 0px;
}

